--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'android.arch.lifecycle:runtime:1.0.3'
-    compile 'android.arch.lifecycle:extensions:1.0.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    testCompile 'junit:junit:4.12'
-    annotationProcessor "android.arch.lifecycle:compiler:1.0.0"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'android.arch.lifecycle:extensions:1.0.0'
+    implementation 'android.arch.lifecycle:common-java8:1.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
 }
